--- a/shopee.html
+++ b/shopee.html
@@ -17,7 +17,7 @@
 
     <section class="section1">
         <div class="conteiner_links">
-            <a href="utilidade.html"><img src="90b26573e0f822d9bb987d05ce396cbc.png">Utilidades!</a>
+            <a href="index.html"><img src="90b26573e0f822d9bb987d05ce396cbc.png">Utilidades!</a>
             <a href="https://api.whatsapp.com/send?phone=5521983016334"><img src="whats.png">Grupo de Ofertas!</a>
             <a href="#"><img src="Telegram_2019_Logo.svg.png">Grupo de Ofertas!</a>
         </div>
