finalizado banco de dados e dinamica

--- a/Utilidades.html
+++ b/Utilidades.html
@@ -15,33 +15,11 @@
 
     <section class="section_cards">
         <div class="conteiner_cards">
-
-            <div class="cards">
-                <div class="imagem_descricao">
-                    <a href="https://shopee.com.br/product/328666563/20844263416">
-                        <div>
-                            <img src="Cabide.jpeg" alt="Cabide">
-                        </div>
-                    </a>
-
-                    <h2>Cabide Mágico Organizador 9 Furos MultiDobrável Guarda-Roupa</h2>
-                </div>
-            </div>         
-            <div class="cards">
-                <div class="imagem_descricao">
-                    <a href="https://shopee.com.br/product/328666563/17932371232">
-                        <div>
-                            <img src="Processador eletrico.jpeg" alt="Cabide">
-                        </div>
-                    </a>
-                    <h2>Mini Processador Elétrico de Alimentos Portátil com 3 lâminas de aço inox USB 250 ml Bivolt</h2>
-             
-                </div>
-            </div>         
-
-
+    <!--Cards Criados Dinamicamentes-->
         </div>
     </section>
+    
+    <script src="index.js"></script>
 
 
 </body>
