--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
     <header>
         <div class="conteiner_img">
-            <img src="" alt="">
+            <img src="logo.jpg" alt="">
         </div>
-        <h1>@Shopee</h1>
+        <h1>@ofertapromobrasil</h1>
     </header>
 
     <section class="section1">
