--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <section class="section1">
         <div class="conteiner_links">
-            <a href="Utilidades.html"><img src="90b26573e0f822d9bb987d05ce396cbc.png">Utilidades!</a>
-            <a href="https://chat.whatsapp.com/LmzmjV6kJ1Z11YFtjiyowg"><img src="whats.png">Grupo de Ofertas!</a>
-            <a href="#"><img src="Telegram_2019_Logo.svg.png">Grupo de Ofertas!</a>
+            <a href="Utilidades.html"><img src="90b26573e0f822d9bb987d05ce396cbc.png">Links de Ofertas</a>
+            <a href="https://chat.whatsapp.com/LmzmjV6kJ1Z11YFtjiyowg"><img src="whats.png">Grupo de Ofertas</a>
+            <a href="#"><img src="Telegram_2019_Logo.svg.png">Grupo de Ofertas</a>
         </div>
     </section>
     
