--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shopee</title>
-    <link rel="stylesheet" href="index.css">
+    <title>@ofertapromobrasil - Ofertas Especiais</title>
+    <meta name="description" content="Encontre as melhores ofertas no @ofertapromobrasil. Descontos incríveis em uma variedade de produtos.">
+    <meta name="keywords" content="ofertas, promoções, descontos, compras online">
+    <link rel="icon" href="assets/imagens/Shopee_Logo.png"  type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <header>
         <div class="conteiner_img">
-            <img src="logo.jpg" alt="">
+            <img src="assets/imagens/logo.jpg" alt="Logo da Loja">
         </div>
         <h1>@ofertapromobrasil</h1>
     </header>
 
-    <section class="section1">
+    <nav class="section1">
         <div class="conteiner_links">
-            <a href="Utilidades.html"><img src="90b26573e0f822d9bb987d05ce396cbc.png">Links de Ofertas</a>
-            <a href="https://chat.whatsapp.com/LmzmjV6kJ1Z11YFtjiyowg"><img src="whats.png">Grupo de Ofertas</a>
-            <a href="#"><img src="Telegram_2019_Logo.svg.png">Grupo de Ofertas</a>
+            <a href="pages/Utilidades.html"><img alt="Logo da shopee" src="assets/imagens/Shopee_Logo.png">Links de Ofertas</a>
+            <a href="https://chat.whatsapp.com/LmzmjV6kJ1Z11YFtjiyowg"><img alt="Logo do whatsapp" src="assets/imagens/Whats_Logo.png">Grupo de Ofertas</a>
+            <a href="#"><img alt="Logo do Telegram" src="assets/imagens/Telegram_Logo.svg.png">Grupo de Ofertas</a>
         </div>
-    </section>
+    </nav>
     
 
 </body>
